# TSP

./: 10496CollectingBeepers.in  11cities_symetric.txt  15cities_symetric.txt  4cities_asymetric.txt  4cities_symetric.txt  6cities_symetric.txt  CMakeLists.txt  README.md
10496 - Collecting Beepers/: CMakeLists.txt  main.cpp
10496 - Collecting Beepers DP/: CMakeLists.txt  main.cpp
brute_force_all_permutations/: CMakeLists.txt  main.cpp
brute_force_multiple_visits/: CMakeLists.txt  main.cpp
dynamic_programming_tsp_solution/: CMakeLists.txt  main.cpp
mst_heuristic/: CMakeLists.txt  Tree.h  main.cpp
nearest_neighbour/: CMakeLists.txt  main.cpp
repetitive_nearest_neighbour/: CMakeLists.txt  main.cpp
tests/: 1000cities_asymetric.txt  1000cities_symetric.txt  100cities_asymetric.txt  100cities_asymmetric.txt  10cities_symmetric.txt  11cities_asymetric.txt  12cities_symetric.txt  13cities_asymetric.txt  14cities_asymmetric.txt  16cities_asymmetric.txt  16cities_symetric.txt  17cities_asymmetric.txt  17cities_symmetric.txt  18cities_asymmetric.txt  18cities_symmetric.txt  19cities_symetric.txt  20cities_asymmetric.txt  21cities_asymetric.txt  22cities_asymmetric.txt  23cities_symetric.txt  24cities_symmetric.txt  25cities_symmetric.txt  26cities_symmetric.txt  300cities_asymetric.txt  500cities_asymmetric.txt  50cities_asymetric.txt  50cities_symetric.txt  5cities_symmetric.txt  600cities_asymmetric.txt  600cities_symmetric.txt  6cities_asymmetric.txt  7cities_symmetric.txt  8cities_symmetric.txt  9cities_symetric.txt  in6asymmetric.txt
(+80 files in other folders)
